@@ -60,7 +60,8 @@ tests			= test-netdb test-digits-dots tst-nss-getpwent bug17079 \
 xtests			= bug-erange
 
 tests-container = \
-			  tst-nss-test3
+			  tst-nss-test3 \
+			  tst-nss-files-hosts-long
 
 # Tests which need libdl
 ifeq (yes,$(build-shared))
